SERVER-39025 Fix feature subset installation from MSI. Missing yaml file is no longer critical.